src/test/testData/parser/good/FlowISDS.basic
IS>(A,1+Ans)
2->A
DS<(theta,sin(2
3->A