src/test/testData/parser/bad/Expression.basic
sin(
2+dim(}
[[1,2[1,2
3-]
dim()-2